timer and display question

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
             </div>
             <div id="card-body">
-              <h5 class="theQuestion"></h5>
+              <!-- <h5 class="theQuestion"></h5>
               <button href="#" class="firstChoice"></button>
               <button href="#" class="secondChoice"></button>
               <button href="#" class="thirdChoice"></button>
-              <button href="#" class="fourthChoice"></button>
+              <button href="#" class="fourthChoice"></button> -->
             </div>
           </div>
     </div>
