first question and timer

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <body>
     <div class="header">
       <a href="HighScore.html">View High Scores</a>
+      <div id="theTimer">
+
+      </div>
     </div>
     <div id="quizContainer">
       <div id="startPage">
@@ -35,16 +38,19 @@
           <br />
           Good luck!
         </p>
-      </div>
-      <div style="text-align: center">
-          <button id="startQuiz">
-            Get Started
-          </button>
-        </form>
+
+        <div style="text-align: center">
+                <button id="startQuiz">
+                  Get Started
+                </button>
+              </form>
+            </div>
+
       </div>
 
+
       <div class="card text-center">
-            <div class="card-header">
+            <div id="card-header">
 
             </div>
             <div id="card-body">
