changed my instructions to match js function

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
           Answer the following questions to the best of your ability as quickly
           as possible
           <br />
-          Answer a question correctly & I will add 15 second to the timer.
-          <br />
-          Answer a question incorrectly & I will remove an additional 5 seconds.
+          Answer a question incorrectly & 15 seconds will be removed from the timer.
           <br />
           The quiz is over when you complete the questions OR the timer runs
           out.
